footer and the footer navigation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Re.Wear Home</title>
+        <link rel="stylesheet" type="text/css" href="./styles.css">
     </head>
     <body>
         <div id="navigation-menu">
@@ -21,5 +22,25 @@
     </body>
     <footer>
         <!-- Footer section here -->
+        <div class="footer-section-container">
+            <div class="footer-section" id="footer-section1">
+                <a class="footer-section-title">Shopping Information </a>
+                <a class="footer-section-link" href="/html/help.html">Help</a>
+                <a class="footer-section-link" href="/html/track-order.html">Track Order</a>
+                <a class="footer-section-link" href="/html/return-policy.html">Return Policy</a>
+            </div>
+            <div class="footer-section" id="footer-section2">
+                <a class="footer-section-title">About Re.Wear</a>
+                <a class="footer-section-link" href="/html/about-us.html">About Us</a>
+                <a class="footer-section-link" href="/html/store-locations.html">Store Locations</a>
+            </div>
+            <div class="footer-section" id="footer-section3">
+                <a class="footer-section-title">Socials & Contacts</a>
+                <a class="footer-section-link" href="https://instagram.com" target="_blank">Instagram</a>
+                <a class="footer-section-link" href="https://twitter.com" target="_blank">Twitter</a>
+                <a class="footer-section-link" href="https://facebook.com" target="_blank">Facebook</a>
+                <a class="footer-section-link" href="/html/contact-us.html">Contact Us</a>
+            </div>
+        </div>
     </footer>
 </html>
